--- a/src/main/resources/templates/board/modify.html
+++ b/src/main/resources/templates/board/modify.html
@@ -141,6 +141,7 @@
               <div>
                 <button class="btn-sm btn-danger  px-2"
                         th:onClick="removeFile([[${arr[0]}]], [[${arr[1]}]], this)">X</button>
+                <!-- thymeleaf에선 javascript 함수 호출시 javascript키워드 생략해야 함. -->
               </div>
             </div>
             <div class="card-body">
