--- a/src/main/resources/templates/layouts/basic.html
+++ b/src/main/resources/templates/layouts/basic.html
@@ -9,13 +9,12 @@
   <meta name="author" content="" />
   <title>Simple Sidebar - Start Bootstrap Template</title>
 
-  <!-- 전체페이지에서 공통을 사용되는 css인경우 :  Core theme CSS (includes Bootstrap) -->
-  <!--  <link href="css/styles.css"-->
-  <!--        th:href="@{/css/bootstrap.min.css}" rel="stylesheet" />-->
-  <link href="css/styles.css"
-        th:href="@{/css/styles.css}" rel="stylesheet" />
+  <!-- 전체페이지에서 공통을 사용되는 css인경우 =>  Core theme CSS (includes Bootstrap) -->
+  <!-- <link href="css/styles.css"
+              th:href="@{/css/bootstrap.min.css}" rel="stylesheet" /> -->
+  <link href="css/styles.css" th:href="@{/css/styles.css}" rel="stylesheet" />
 
-  <!-- css import : 특정 페이지에서 사용되는 css인경우 -->
+  <!-- css import => 특정 페이지에서 사용되는 css인경우 -->
   <th:block layout:fragment="mystyle"></th:block>
 
 </head>
