--- a/src/main/resources/templates/layouts/basic.html
+++ b/src/main/resources/templates/layouts/basic.html
@@ -14,8 +14,8 @@
               th:href="@{/css/bootstrap.min.css}" rel="stylesheet" /> -->
   <link href="css/styles.css" th:href="@{/css/styles.css}" rel="stylesheet" />
 
-  <!-- css import => 특정 페이지에서 사용되는 css인경우 -->
-  <th:block layout:fragment="mystyle"></th:block>
+
+  <th:block layout:fragment="mystyle"></th:block> <!-- css import => 특정 페이지에서 사용되는 css인 경우 -->
 
 </head>
 
